controlplane-api/config/network-policy/allow-api-traffic.yaml
# Copyright 2025 Deutsche Telekom IT GmbH
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: controlplane-api-allow-api-traffic
  namespace: system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: controlplane-api
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            cp.ei.telekom.de/controlplane-api: enabled
      ports:
        - port: 8443
          protocol: TCP
